--- a/Login Screen/Login Page.html
+++ b/Login Screen/Login Page.html
@@ -41,7 +41,7 @@
          </div>
 
          <div class="inputfield">
-         <input type="button" value="LOG IN" class="btn">
+         <input type="submit" value="LOG IN" class="btn">
          </div>
       </div>
    </div>
