--- a/CSS homepage floating card design/Home_Page_main.html
+++ b/CSS homepage floating card design/Home_Page_main.html
@@ -14,6 +14,10 @@
   
 <body>
 
+    <header>
+        <h1>ANJANA FOOD INDUSTRIES</h1>
+    </header>
+
     <div class="container">
 
         <!-- Customer Section -->
