autocomplete turned off

--- a/Form Design/index.html
+++ b/Form Design/index.html
@@ -39,63 +39,64 @@
          Add New Customer
       </div>
       <div class="form">
+      	<form autocomplete="off">
+
+	         <!-- Owner Name -->
+	         <div class="inputfield">
+	            <label>Owner Name</label>
+	            <input type="text" class="input">
+	         </div>
 
 
-         <!-- Owner Name -->
-         <div class="inputfield">
-            <label>Owner Name</label>
-            <input type="text" class="input">
-         </div>
+	         <!--Shop Name-->
+	         <div class="inputfield">
+	            <label>Shop Name</label>
+	            <input type="text" class="input">
+	         </div>
+
+	         <!-- Address -->
+	         <div class="inputfield">
+	            <label>Address</label>
+	            <textarea class="textarea"></textarea>
+	         </div>
+
+	         <!-- Phone Number -->
+	         <div class="inputfield">
+	            <label>Phone Number</label>
+	            <input type="tel" class="input">
+	         </div>
+
+	         <!-- Type -->
+	         <div class="inputfield">
+	            <label>Type</label>
+	            <input type="text" class="input">
+	         </div>
+
+	         <!-- Weekly Sales -->
+	         <div class="inputfield">
+	            <label>Weekly Sales</label>
+	            <input type="text" class="input">
+	         </div>
 
 
-         <!--Shop Name-->
-         <div class="inputfield">
-            <label>Shop Name</label>
-            <input type="text" class="input">
-         </div>
-
-         <!-- Address -->
-         <div class="inputfield">
-            <label>Address</label>
-            <textarea class="textarea"></textarea>
-         </div>
-
-         <!-- Phone Number -->
-         <div class="inputfield">
-            <label>Phone Number</label>
-            <input type="tel" class="input">
-         </div>
-
-         <!-- Type -->
-         <div class="inputfield">
-            <label>Type</label>
-            <input type="text" class="input">
-         </div>
-
-         <!-- Weekly Sales -->
-         <div class="inputfield">
-            <label>Weekly Sales</label>
-            <input type="text" class="input">
-         </div>
+	         <!-- Credit -->
+	         <div class="inputfield">
+	            <label>Credit</label>
+	            <input type="text" class="input">
+	         </div>
 
 
-         <!-- Credit -->
-         <div class="inputfield">
-            <label>Credit</label>
-            <input type="text" class="input">
-         </div>
+	         <!-- Feedback -->
+	         <div class="inputfield">
+	            <label>Feedback</label>
+	            <input type="text" class="input">
+	         </div>
 
-
-         <!-- Feedback -->
-         <div class="inputfield">
-            <label>Feedback</label>
-            <input type="text" class="input">
-         </div>
-
-         <div class="inputfield">
-         <input type="button" value="Submit" class="btn">
-         </div>
-      </div>
+	         <div class="inputfield">
+	         <input type="button" value="Submit" class="btn">
+	         </div>
+	      </div>
+	  </form>
    </div>
 </div>
 
